# opengl-study

./: .envrc  .gitignore  CMakeLists.txt  README.md  conanfile.py  deps.txt
assets/: coral_cube.mtl
cmake/: examples.cmake
lib/dk/: CMakeLists.txt
lib/dk/cmake/: docs.cmake
lib/dk/docs/: Doxyfile.in
lib/dk/examples/obj_file/: main.cpp
lib/dk/examples/quaternion/rotation/: main.cpp
lib/dk/include/dklib/: blackboard.h  concepts.h  dklib.h  file.h  gl.h  math.h  util.h
lib/dk/include/dklib/file/: file_base.hpp  ktx_file.hpp  obj_file.hpp
lib/dk/include/dklib/gl/: app.hpp  buffer.hpp  buffer_object.hpp  color.hpp  draw.hpp  gl_concepts.hpp  gltypes.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  program.hpp  sdl.hpp  shader.hpp  texture.hpp  uniform.hpp  vertex.hpp
lib/dk/include/dklib/math/: angle.hpp  dual.h  geometry.h  math_concepts.hpp  matrix.hpp  matrix2d.hpp  matrix3d.hpp  matrix4d.hpp  matrix_iterator.hpp  matrix_view.hpp  quaternion.hpp  transform2d.hpp  transform3d.hpp  vector.hpp  vector2d.hpp  vector3d.hpp  vmath.h
lib/dk/include/dklib/math/geometry/: cube.hpp  geometry.h  polygon.hpp  shape.hpp
lib/dk/include/dklib/sdl/: context.hpp  exception.hpp  runtime.hpp  window.hpp
lib/dk/include/dklib/tree/: tree.h  tree_base.hpp
lib/dk/include/dklib/util/: opengl_util.hpp  string_util.hpp  variant_util.hpp
lib/dk/src/core/: transform2d.cpp
lib/dk/src/file/: file_base.cpp  ktx_file.cpp  obj_file.cpp
lib/dk/src/gl/: app.cpp  draw.cpp  program.cpp  shader.cpp
lib/dk/src/math/: angle.cpp  math.cpp  quaternion.cpp  vector3d.cpp
lib/dk/src/sdl/: exception.cpp  runtime.cpp
lib/dk/src/util/: opengl_util.cpp  string_util.cpp
lib/dk/tests/: test_blackboard.cpp  test_color.cpp  test_main.cpp  test_util.cpp
lib/dk/tests/math/: test_angle.cpp  test_quaternion.cpp  test_vector3d.cpp
lib/dk/tests/mocks/: vertices.txt
lib/dk/tests/sdl/: test_exception.cpp  test_runtime.cpp
lib/dk/tests/util/: test_string_util.cpp
src/first_geometry_shader/: fshader.glsl  gshader.glsl  main.cpp  triangle.hpp  vshader.glsl
src/first_triangle/: base.vert.glsl  main.cpp  triangle.hpp  vshader.glsl
src/hello_world/: hello_world_app.hpp  main.cpp
src/mesh_with_indices/: main.cpp  main.vert.glsl
src/rgb_normals/: main.cpp  main.frag.glsl  main.vert.glsl
src/simple_cube/: main.cpp  triangle.hpp  vshader.glsl
src/simple_shader/: fshader.glsl  main.cpp  simple_shader.hpp
src/spinning_cube/: base.fs.glsl  base.vs.glsl  main.cpp
src/tessellated_triangle/: main.cpp  tess_ctrl.glsl  tess_eval.glsl  triangle.hpp  vshader.glsl
src/test_colored_screen/: main.cpp  main.frag.glsl  main.vert.glsl
src/textured_rectangle/: main.cpp  main.frag.glsl  main.vert.glsl
src/true_triangle/: fshader.glsl  main.cpp  triangle.hpp  vshader.glsl
